- [TESTS] [SYSTEM] Implement Network test cases
- [TESTS] [WORKFLOW] Implement Workflow test cases
### Removed
- [TESTS] Remove old 'testing' folder
### Changed
- [SYSTEM] [SETTINGS] Use Hostname value from Django settings
### Fixed
- [SYSTEM] [MONGODB] Always refer to settings to connect to mongodb
- [API_PARSER] [BEYONDTRUST_REPORTINGS] 'since' going up infinitely in some cases


## [2.22.1] - 2025-03-03
### Fixed
- [API_PARSER] [NETSKOPE] Correctly update the last_collected_timestamp, even when no logs are received
- [API_PARSER] [CYBEREASON] Avoid None evaluation of log objects in format_log for malops
- [API_PARSER] [CROWDSTRIKE] Fix infinite loop when we encounters more than 100 logs (default limit) in one request
- [API_PARSER] [PROOFPOINT_TRAP] Handle and avoid request timeouts by progressively reducing queries range


## [2.22.0] - 2025-02-25
### Added
- [SERVICE] [FILEBEAT] Support new rc calls to check services separatly
### Fixed
- [API_PARSER] [CISCO_UMBRELLA_MANAGED_ORG] Avoid errors and crashes when no logs are available for some customer IDs
- [API_PARSER] [CARBON_BLACK] Avoid API limits of 10k logs
- [SERVICE] [FILEBEAT] Ensure config files are correctly deleted on Listener deletion
- [ACLs] [APIs] Correct URL path to change ACLs through APIs
- [SERVICES] Improve how service statuses are reported
### Changed
- [API_PARSER] [CARBON_BLACK] Use v7 of APIs


## [2.21.0] - 2025-02-06
### Changed
- [API_PARSER] [NETSKOPE] Add the possiblity to retrieve 3 new kinds of logs
### Fixed
- [API_PARSER] [NETSKOPE] Remove duplicated logs
- [API_PARSER] [CATONETWORKS] Fix invalid HTML
- [API_PARSER] [WAF_CLOUDFLARE] Correctly set and use the `fields` list
- [API_PARSER] [CISCO_DUO] Avoid updating last timestamp when unecessary and add a 2-minute delay to collect


## [2.20.0] - 2025-02-04
### Added
- [API_PARSER] [CATONETWORKS] New collector
- [API_PARSER] [INFOBLOX_THREAT_DEFENSE] New collector
- [API_PARSER] [BEYONDTRUST_REPORTINGS] New collector

